k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexor
  labels:
    app.kubernetes.io/name: nexor
